--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-
+*.patch
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
