--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mask-rcnn/matterport"]
 	path = mask-rcnn/matterport
 	url = https://github.com/matterport/Mask_RCNN
+[submodule "yolov4/tensorflow"]
+	path = yolov4/tensorflow
+	url = https://github.com/hunglc007/tensorflow-yolov4-tflite
