Added a patch for the convert_tflite.py file which automatically install the coco dataset and manipulates the entries in val2017.txt which have been hardcoded with some random path.

--- a/install.yml
+++ b/install.yml
@@ -41,5 +41,14 @@ components:
       patches:
         common:
           core_config:
+              # Work around relative path of the config which forces you
+              # to run stuff in the git repo root.
               ori: yolov4/tensorf/core/config.py
               new: patches/yolov4/config.py
+
+          tflite:
+              # This patch installs the coco dataset when converting model
+              # to full_int8
+              ori: yolov4/tensorf/convert_tflite.py
+              new: patches/yolov4/convert_tflite.py
+
