--- a/install.yml
+++ b/install.yml
@@ -20,12 +20,20 @@ components:
           requirements:
               ori: mask-rcnn/matterport/requirements.txt
               new: patches/matterport-mrcnn/requirements.txt
-          model:
+         #Laurent changes not working 
+         # model:
+         #     ori: mask-rcnn/matterport/mrcnn/model.py
+         #     new: patches/matterport-mrcnn/model.py
+         # utils:
+         #     ori: mask-rcnn/matterport/mrcnn/utils.py
+         #      new: patches/matterport-mrcnn/utils.py
+        
+         # model:
               ori: mask-rcnn/matterport/mrcnn/model.py
-              new: patches/matterport-mrcnn/model.py
-          utils:
+              new: patches/matterport-mrcnn/AmanTF2.2/model.py
+         # utils:
               ori: mask-rcnn/matterport/mrcnn/utils.py
-              new: patches/matterport-mrcnn/utils.py
+              new: patches/matterport-mrcnn/AmanTF2.2/utils.py
 
       commands:
         - pip3 install -U -r mask-rcnn/matterport/requirements.txt
