--- a/install.yml
+++ b/install.yml
@@ -28,10 +28,10 @@ components:
          #     ori: mask-rcnn/matterport/mrcnn/utils.py
          #      new: patches/matterport-mrcnn/utils.py
          #Aman changes 
-         # model:
+          model:
               ori: mask-rcnn/matterport/mrcnn/model.py
               new: patches/matterport-mrcnn/AmanTF2.2/model.py
-         # utils:
+          utils:
               ori: mask-rcnn/matterport/mrcnn/utils.py
               new: patches/matterport-mrcnn/AmanTF2.2/utils.py
 
