--- a/patches/matterport-mrcnn/requirements.txt
+++ b/patches/matterport-mrcnn/requirements.txt
@@ -4,8 +4,8 @@ Pillow
 cython
 matplotlib
 scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
+tensorflow=2.3.0
+keras=2.3.1
 opencv-python; platform_machine!='aarch64'
 h5py
 imgaug
