--- a/install.yml
+++ b/install.yml
@@ -37,7 +37,7 @@ components:
 
       commands:
         - pip3 install -U -r mask-rcnn/matterport/requirements.txt
-        #- pip3 install -U -e mask-rcnn/matterport/
+        - pip3 install -U -e mask-rcnn/matterport/
 
   yolov4-tf :
       doc: |
