--- a/install.yml
+++ b/install.yml
@@ -19,7 +19,7 @@ components:
         tensorflow_2:
           requirements:
               ori: mask-rcnn/matterport/requirements.txt
-              new: patches/matterport-mrcnn/requirements.txt
+              new: patches/matterport-mrcnn/AmanTF2.2/requirements.txt
          #Laurent changes not working 
          # model:
          #     ori: mask-rcnn/matterport/mrcnn/model.py
@@ -35,9 +35,9 @@ components:
               ori: mask-rcnn/matterport/mrcnn/utils.py
               new: patches/matterport-mrcnn/AmanTF2.2/utils.py
 
-     # commands:
-        # - pip3 install -U -r mask-rcnn/matterport/requirements.txt
-       #  - pip3 install -U -e mask-rcnn/matterport/
+      commands:
+         - pip3 install -U -r mask-rcnn/matterport/requirements.txt
+         - pip3 install -U -e mask-rcnn/matterport/
 
   yolov4-tf :
       doc: |
